clusters/talos-robbinsdale/apps-flux-new/rook-ceph/cluster/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "rook.rajsingh.info"
    - "rook.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
